fix: issue with invalid message not showing for is([data-semantic], :empty) (#2978)

--- a/packages/components/src/styles/_form-components.scss
+++ b/packages/components/src/styles/_form-components.scss
@@ -50,7 +50,7 @@ $check-border-size: min(#{variables.$db-border-height-2xs}, 2px);
 	.db-infotext {
 		margin-block-start: variables.$db-spacing-fixed-2xs;
 
-		&:is([data-semantic], :empty) {
+		&[data-semantic] {
 			display: none;
 		}
 	}
@@ -197,7 +197,7 @@ $check-border-size: min(#{variables.$db-border-height-2xs}, 2px);
 			--db-#{$variant}-on-bg-basic-emphasis-100-default
 		);
 		--db-adaptive-on-bg-basic-emphasis-60-default: var(
-			--db-#{$variant}-border
+			--db-#{$variant}-on-bg-basic-emphasis-60-default
 		);
 	}
 }
